[B] Correct header dropdown and dialog z-index
Fixes #784

--- a/client/src/theme/_z-stack.scss
+++ b/client/src/theme/_z-stack.scss
@@ -32,7 +32,7 @@
 }
 
 .drawer-backend, .drawer-frontend, .drawer-overlay {
-  z-index: 500;
+  z-index: 400;
 }
 
 .drawer-reader {
@@ -40,7 +40,7 @@
 }
 
 .dialog-primary {
-  z-index: 500;
+  z-index: 600;
 }
 
 .notation-preview-footer {
